--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,9 +28,12 @@ img {
 
 /* Navbar */
 .navbar {
-  height: 10vh;
+  height: 8vh;
 }
 .navbar-brand:hover {
   text-decoration: none;
   cursor: pointer;
+}
+.maintop {
+  background-color: white;
 }
