--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,82 +66,15 @@ img {
 }
 
 /* GALLERY */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
 
-.section-fluid-main {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  width: calc(100% - 4rem);
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1400px;
-}
-.section-row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-.section-row:hover .section-col {
-  opacity: 0.1;
-}
-.section-col {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  width: 100%;
-  max-width: 50%;
-  transition: opacity 250ms linear;
-}
-.section-row .section-col:hover {
-  opacity: 1;
-}
-.section {
-  position: relative;
-  display: block;
-  width: 80%;
-  overflow: hidden;
-  cursor: pointer;
-  padding: 15px;
-}
-.section-in {
-  position: relative;
-  display: block;
-  width: 100%;
-  overflow: hidden;
-  border-radius: 1rem;
-  cursor: pointer;
-}
-.section-in img {
-  display: block;
-  width: 100%;
-  height: auto;
-  transition: transform 250ms linear;
-}
-.section-col:hover .section-in img {
-  transform: scale(1.1) rotate(-3deg);
-}
-
-.section-col:hover {
-  opacity: 1;
-  transform: scale(1);
-}
-
-@media (max-width: 767px) {
-  .section-col {
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
-    max-width: 100%;
+@media screen and (min-width: 800px) {
+  .card {
+    transition: 0.5s;
+  }
+  .card:hover {
+    transform: rotate(-5deg) scale(1.1);
+    -webkit-transform: rotate(-5deg) scale(1.1);
+    transition: 0.5s;
   }
 }
 .title-gallery {
